# edgeai

./: README.md
Finetune/: README.md
Finetune/llm-tuning-lab/: .gitignore  CONTRIBUTING.md  README.md  requirements.txt
Finetune/llm-tuning-lab/docker/: Dockerfile.service  Dockerfile.trainer  docker-compose.yml
Finetune/llm-tuning-lab/docs/: 00_overview.md  01_lora_theory.md  02_qlora_quantization.md  03_sdk_design.md  04_training_service.md  05_monitoring_eval.md  06_model_registry.md  07_serving_inference.md
Finetune/llm-tuning-lab/lab_tasks/task01_lora/: README.md  config.yaml  train_lora.py
Finetune/llm-tuning-lab/lab_tasks/task01_lora_basic/: GUIDE.md  README.md  checklist.md  config.yaml  discussion.md  lora_linear.py  requirements.txt  train_lora_basic.py
Finetune/llm-tuning-lab/lab_tasks/task02_qlora/: GUIDE.md  README.md  (+5 more)
Finetune/llm-tuning-lab/scripts/: check_environment.py
Pruning/: .gitignore  README.md  goad,txt  main.py  pyproject.toml
Pruning/pruning-bootcamp/cfgs/: cifar10_resnet18.yaml  imagenetmini_resnet18.yaml
Pruning/pruning-bootcamp/datasets/: loader.py
Pruning/pruning-bootcamp/scripts/: eval.py  export_onnx.py  model_profiler.py  prune_structured.py  prune_unstructured.py  train.py
Pruning/pruning-bootcamp/tools/: latency.py  metrics.py  pruning_utils.py
model_application/: .gitignore  README.md
model_application/llm-multimodel-lab/: README.md
model_application/llm-multimodel-lab/docs/: 01_infographicvqa_qlora.md
model_optimization/pruning/: LICENSE  README.md
model_optimization/pruning/note/: concept_watershed.md
(+62 files in other folders)
